Combobox steals mouse event after menu is closed with Alt+Up. b=348236 r=mats sr=bzbarsky